--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .js --fix",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
@@ -16,9 +17,17 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "normalize.css": "^8.0.1",
     "prettier": "^3.5.3",
     "sass": "^1.89.0",
     "vite": "^6.3.5"
+  },
+  "lint-staged": {
+    "*.{js,scss,html}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
